--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500;600&family=Poppins&display=swap');
+
 .App {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Poppins', sans-serif;
   overflow-x: hidden;
 }
 :root {
