--- a/src/components/HomePage/Banner/Banner.css
+++ b/src/components/HomePage/Banner/Banner.css
@@ -1,20 +1,8 @@
-.banner{
-background-image: url(../../../images/demo-banner.jpg);
-background-size: cover;
-width: 100vw;
-height: 80vh;
-background-repeat: no-repeat;
-background-size: cover;
-background-position: center;
-position: relative;
+
+.banner-text{
+  font-family: "Cormorant";
 }
 
-@media only screen and (max-width: 600px) {
-    .banner {
-      background-image: url(../../../images/banner-small.png);
-      width: 100vw;
-      height: 80vh;
-      margin-left: 20px;
-      margin-bottom: 20px;
-    }
-  }
+span{
+  color: #d4af37;
+}
