--- a/src/components/SingleBooking/SingleBooking.css
+++ b/src/components/SingleBooking/SingleBooking.css
@@ -14,8 +14,13 @@ p {
     color: rgb(75, 73, 73);
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 480px) {
   .singleBooking{
     width: 100vw;
   }
+  .img{
+    width: 60vw;
+    height: 100px;
+    border-radius: 10px;
+}
 }
