--- a/src/components/Shared/Footer/Footer.css
+++ b/src/components/Shared/Footer/Footer.css
@@ -4,8 +4,7 @@
     position: relative;
     bottom: 0px;
     padding-top: 60px;
-    margin-top: 20px;
-
+    margin-top: 10%;
 }
 .links a{
   text-decoration: none;
